# mafia

./: .dockerignore  .example.env  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  test_ws.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps/accounts/: middleware.py  models.py  serializers.py  services.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_user_created_at_user_is_verified_and_more.py
apps/accounts/services/: account.py  email.py  token.py
apps/accounts/tasks/: email_tasks.py
apps/accounts/tests/: test_account_service.py  test_email_service.py  test_models.py  test_token_service.py  test_views.py
apps/core/: redis.py  webrtc.py
apps/core/utils/: uuid.py
apps/friends/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/friends/migrations/: 0001_initial.py
apps/game/: __init__.py  admin.py  consumers.py  distributor.py  models.py  roles.py  session.py
apps/game/engine/: action.py  constants.py  player.py  round.py  session.py
apps/game/migrations/: 0001_initial.py
apps/realtime/: consumers.py  dispatch.py  error_codes.py  groups.py  membership.py
apps/realtime/events/: __init__.py  base.py  errors.py  game.py  room.py
apps/realtime/handlers/: __init__.py  decorators.py  game.py  room.py
apps/room/: admin.py  consumers.py  models.py  realtime.py  serializers.py  services.py  session.py  urls.py  views.py
apps/room/migrations/: 0001_initial.py  0002_remove_room_is_active_room_status.py  (+8 more)
backend/: pyproject.toml
backend/config/: settings.py
config/: api.py  asgi.py  celery.py  routing.py  settings.py  urls.py
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
http/accounts/: login.http  register.http
http/rooms/: create.http  http-client.env.json
http/ws/: room.http
specs/001-lobby-room-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-auth-email-verification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  test_settings.py
tests/accounts/: test_services.py  test_views.py
tests/friends/: test_services.py  test_views.py
tests/game/: test_obligations.py
tests/realtime/: test_game_state.py
tests/room/: test_services.py  test_services_joining.py  test_views.py
utils/: errors.py  pagination.py  validators.py
(+19 files in other folders)
