[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "channels>=4.3.2",
    "channels-redis>=4.2.2",
    "daphne>=4.2.2",
    "django>=6.0.6",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg2-binary>=2.9",
    "watchfiles>=1.2.0",
    "websockets>=16.0",
]
