[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "channels>=4.3.2",
    "channels-redis>=4.2.2",
    "redis>=5.0.0",
    "cloudflare>=5.4.0",
    "daphne>=4.2.2",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.17.0",
    "mailjet-rest>=1.7.0",
    "psycopg2-binary>=2.9",
    "watchfiles>=1.2.0",
    "websockets>=16.0",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-django>=4",
    "pytest-asyncio>=0.24",
    "mypy>=1",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_settings"
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py314"
extend-exclude = ["migrations"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.test_settings"

[dependency-groups]
dev = [
    "django-stubs>=6.0.6",
]
